--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,11 @@
-/* :root {
+:root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: white;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: white;
     --foreground: #ededed;
   }
 }
@@ -39,4 +39,4 @@ a {
   html {
     color-scheme: dark;
   }
-} */
+}
