--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -4,7 +4,7 @@
  justify-content: space-between;
  gap: 3rem;
  padding: 4rem 2rem;
- background: #1c1c1c; // dark background like screenshot
+ background: #6f6f6f; // dark background like screenshot
  color: white;
  min-height: 100vh;  
  .skillsLeft {
