project and contact page setup

--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -1,5 +1,5 @@
-.project{
- background-color: rgb(110, 110, 157);
+.contact{
+ background-color: rgb(158, 158, 207);
  min-height: 100vh;
  text-align: center;
  font-size: 200px;
