--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -10,7 +10,7 @@
  left: 50%;
  transform: translateX(-50%);
 
- background: white;
+ // background: white;
  z-index: 1000;
  border: 1px solid grey;
  border-radius: 40px;
